# optuna-rs

./: .gitignore  AUDIT_PROGRESS.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  audit_gp_deep_comparison_2026_07_28.md  audit_importance_deep_comparison_2026_07_28.md  audit_nsga_deep_comparison_2026_07_28.md  audit_terminators_deep_comparison_2026_07_28.md  audit_tpe_deep_comparison_2026_07_28.md  build.rs
.github/ISSUE_TEMPLATE/: feature_request.md
examples/: cmaes_rosenbrock.rs  multi_objective.rs  pruning.rs  simple_optimization.rs  tpe_optimization.rs
proto/: optuna_storage.proto
src/: artifacts.rs  cli.rs  error.rs  importance.rs  integration.rs  lib.rs  logging.rs  multi_objective.rs  progress_bar.rs  terminators.rs  testing.rs  visualization.rs  visualization_matplotlib.rs
src/artifacts/: gcs.rs  s3.rs
src/callbacks/: mod.rs
src/distributions/: categorical.rs  float.rs  int.rs  mod.rs
src/pruners/: hyperband.rs  median.rs  mod.rs  nop.rs  patient.rs  percentile.rs  successive_halving.rs  threshold.rs  wilcoxon.rs
src/samplers/: brute_force.rs  cmaes.rs  ga.rs  gp.rs  gp_lbfgsb.rs  gp_optim_mixed.rs  grid.rs  mod.rs  partial_fixed.rs  qmc.rs  random.rs  sobol_direction_numbers.rs
src/samplers/nsgaii/: crossover.rs  mod.rs  sampler.rs
src/samplers/nsgaiii/: mod.rs  sampler.rs
src/samplers/tpe/: mod.rs  parzen_estimator.rs  sampler.rs  truncnorm.rs
src/search_space/: group_decomposed.rs  intersection.rs  mod.rs  transform.rs
src/storage/: cached.rs  heartbeat.rs  in_memory.rs  journal.rs  mod.rs  redis_backend.rs
src/storage/grpc/: client.rs  mod.rs  server.rs
src/storage/rdb/: entity.rs  mod.rs
src/study/: core.rs  dataframe.rs  direction.rs  frozen.rs  mod.rs  summary.rs
src/trial/: base.rs  fixed.rs  frozen.rs  handle.rs  mod.rs  state.rs
tests/: acqf_cross_validate.rs  box_decomp_cross_validate.rs  cmaes_cross_validate.rs  comprehensive_baseline.json  comprehensive_cross_validate.rs  constrained_cross_validate.rs  crossover_baseline.json  crossover_cross_validate.rs  deep_cross_validation.rs  detailed_baseline.json  detailed_cross_validate.rs  distribution_study_cross_validate.rs  distributions_deep_cross_validate.rs  distributions_deep_golden_values.json  generate_comprehensive_baseline.py  generate_crossover_baseline.py  generate_detailed_baseline.py  generate_nsga_deep_baseline.py  generate_nsga_sorting_baseline.py  golden_cmaes.py  golden_cmaes_lr_adapt.py  golden_cmaes_update.py  golden_constrained.py  golden_crowding.py  golden_distributions_deep.py  golden_eigen.py  golden_gp_deep.py  golden_gp_normalize.py  golden_gp_values.py  golden_importance_deep.py  golden_logei_values.py  golden_motpe_weights.py  golden_multi_objective.py  golden_ndr.py  golden_nsga_deep.py  golden_nsgaiii.py  golden_pe_endpoints.py  golden_pruners_deep.py  golden_qmc_random.py  golden_search_space.py  (+73 more)
