[package]
name = "optuna-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust port of Optuna — hyperparameter optimization with TPE, CMA-ES, NSGA-II/III, and more"
repository = "https://github.com/brayniac/optuna-rs"
keywords = ["optimization", "hyperparameter", "bayesian", "machine-learning"]
categories = ["algorithms", "science"]
authors = ["Brian Martin"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
parking_lot = "0.12"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libm = "0.2"
rand_distr = "0.4"
thiserror = "2"
